apps/2fauth/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twofauth
  labels:
    app.kubernetes.io/name: twofauth
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: twofauth
  template:
    metadata:
      labels:
        app.kubernetes.io/name: twofauth
    spec:
      nodeSelector:
        kubernetes.io/hostname: helium
      securityContext:
        fsGroup: 1000
      containers:
        - name: twofauth
          image: 2fauth/2fauth:latest
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - name: data
              mountPath: /2fauth
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: twofauth-data
