apps/2fauth/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 2fauth
  labels:
    app.kubernetes.io/name: 2fauth
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  selector:
    app.kubernetes.io/name: 2fauth
