apps/2fauth/resources/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: twofauth
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: twofauth
    gethomepage.dev/description: Two-Factor Authentication
    gethomepage.dev/group: Security
    gethomepage.dev/icon: 2fauth
    gethomepage.dev/href: https://2fauth.cyphers.app
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`2fauth.cyphers.app`)
      middlewares:
        - name: authentik-auth
          namespace: authentik
        - name: default-headers
          namespace: traefik
      services:
        - name: twofauth
          namespace: 2fauth
          port: 8000
  tls:
    secretName: production-cyphers-app-tls
